fixed skills height on mobile

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -322,7 +322,7 @@ body {
 //////////////////////Skills//////////////////////
 
 .skill-div {
-  height: 200px;
+  height: 310px;
   text-align: center;
 }
 
